feat(project): 实现PPT项目管理系统基础功能
新增项目管理功能，包括：
1. 前后端项目创建、打开、保存API
2. 项目元数据存储结构
3. 幻灯片拖拽排序功能
4. 最近项目列表和欢迎页面
5. 项目设置和自动备份功能

添加了@dnd-kit相关依赖实现拖拽排序，完善了前后端交互逻辑。项目数据按规范目录结构存储，包含project.json元数据文件和幻灯片内容。

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ frontend/dist/
 .claude/hooks/
 *.json.backup*
 .claude/settings.json
+
+# Project data
+backend/projects/
+
+# Test artifacts
+docs/test-results/
