--- a/backend/package.json
+++ b/backend/package.json
@@ -9,15 +9,17 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
-    "ws": "^8.18.0",
-    "cors": "^2.8.5"
+    "uuid": "^13.0.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
+    "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.13",
-    "@types/cors": "^2.8.17",
     "tsx": "^4.19.2",
     "typescript": "~5.6.2"
   }
