--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "node --experimental-vm-modules ../node_modules/jest/bin/jest.js",
-    "test:watch": "node --experimental-vm-modules ../node_modules/jest/bin/jest.js --watch"
+    "test:watch": "node --experimental-vm-modules ../node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "node --experimental-vm-modules ../node_modules/jest/bin/jest.js --coverage"
   },
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
